docker-kubernetes-springboot-demo/docker-kubernetes-springboot-demo/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: backend
spec:
  containers:
    - name: springboot-docker
      image: skedia/docker-kubernetes-springboot-demo
