docker-kubernetes-springboot-demo/docker-kubernetes-springboot-demo/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nodeport-service
  labels:
    app: myapp
spec:
  type: NodePort
  selector:
    app: myapp
    type: backend
  ports:
    - port: 80 # service port
      targetPort: 8080 # application port
      nodePort: 30080 # node port is the port exposed at the container level for all the nodes matching to the selector. It can be accessed using the machine's IP address 
  clusterIP: 10.96.0.2
