docker-kubernetes-springboot-demo/docker-kubernetes-springboot-demo/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp-api.com
      http:
        paths:
          - path: /
            backend: 
              serviceName: myapp-loadbalancer-service
              servicePort: 80
